tdf#90377: fix exclude recipient in mail merge

- first, actually use the selection in MergeNew()
- secoond, bring back GetSelection() for that
- third, throw away lots of the old (dead) code that mostly just
  stumbled over itself
  - e.g. ExcludeRecord() wouldnt work on the last element due to a
    off-by-one error

Change-Id: I07d07e086b748b393f2ada7cb22fdb2ce285ad65
Reviewed-on: https://gerrit.libreoffice.org/16762
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>